--- a/requirements.txt
+++ b/requirements.txt
@@ -24,16 +24,14 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pyparsing==3.0.9
+python-slugify==8.0.1
 pytz==2023.2
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
+text-unidecode==1.3
 uritemplate==4.1.1
 urllib3==1.26.15
 Werkzeug==2.2.3
 zope.interface==6.0
-
-pip~=22.3.1
-wheel~=0.38.4
-setuptools~=65.5.1
